# schoolmath_bot

./: Cargo.toml  Dockerfile  LICENSE  README
src/: exgen.rs  main.rs  pdf.rs
