[package]
name = "schoolmath_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5.0"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.44.1", features = ["full"] }
rand = { version = "0.9.0", features = ["std_rng"] }
lazy_static = "1.5.0"
